# simulink_embed_web_heartbeat

./: CMakeLists.txt  main.cpp
include/: rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  smooth_simu.h  smooth_simu_private.h  smooth_simu_types.h
simulink/: smooth_simu.slx
smooth-web/: package-lock.json  package.json
smooth-web/src/: App.js  index.js
smooth-web/src/pages/: About.js  Home.js
src/: rtGetNaN.cpp  rt_nonfinite.cpp  smooth_simu.cpp
